# eqxpress

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests.yml
api/: index.html
docs/: index.md
docs/api/: index.md
eqxpress/: __init__.py  algebra.py  base.py  math.py  nodes.py  primitives.py
eqxpress/utils/: tree.py
license/: index.html
search/: search_index.json
tests/: algebra_test.py  base_test.py  primitive_test.py
